# ml-training

./: pyproject.toml
mlx-lora-training/: training.ipynb
mlx-lora-training/adapters/: 0000100_adapters.safetensors  0000200_adapters.safetensors  0000300_adapters.safetensors  0000400_adapters.safetensors  0000500_adapters.safetensors  0000600_adapters.safetensors  0000700_adapters.safetensors  0000800_adapters.safetensors  0000900_adapters.safetensors  0001000_adapters.safetensors  adapter_config.json
mlx-lora-training/data/: data_prep.ipynb  test.jsonl  valid.jsonl
